Completed and refactored integration test steps 8-15 without security. Added integration tests for validation and offer already exists scenario. Refactored offers module.